Fix filter bug on mobile

--- a/_scss/_filter.scss
+++ b/_scss/_filter.scss
@@ -3,7 +3,7 @@
 }
 
 .filter-item {
-  max-height: 20em;
+  max-height: 40em;
   position: relative;
   opacity: 1;
   transition: all .5s ease-in-out;
